--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-image-gallery": "^1.0.2",
     "@types/react-lazy-load-image-component": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image": "^4.0.3",
+    "react-image-gallery": "^1.0.9",
     "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
